objects/SBQQ__Quote__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteHelp</customHelpPage>
    <description>Sales quote for a given opportunity. There may be multiple quotes for a single opportunity.</description>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>Approval Status of the Quote</description>
        <inlineHelpText>Approval Status of the Quote.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovalsArchived__c</fullName>
        <description>The field can be set to a value of 1 to prevent approval records from being deleted form the approvals Related List when using advanced approvals.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApprovalsArchived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCB_Product_Count__c</fullName>
        <label>CCB Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCM_Product_Count__c</fullName>
        <description>CCM Product Count</description>
        <inlineHelpText>CCM Product Count</inlineHelpText>
        <label>CCM Product Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EditLinesFieldSetName__c</fullName>
        <formula>CASE( L2O_Business_Region__c , &apos;USA&apos;, &apos;SBQQ__LineEditor&apos;, &apos;Canada&apos;, &apos;Line_Editor_Canada&apos;,&apos;Line_Editor_INTL&apos;)</formula>
        <label>Edit Lines Field Set Assign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipAddlDiscPresent__c</fullName>
        <formula>IF( EquipmentAddlDiscFlag__c &gt;0,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EquipAddlDiscPresent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EquipmentAddlDiscFlag__c</fullName>
        <description>Count Equipment records having additional discount</description>
        <inlineHelpText>Count Equipment records having additional discount</inlineHelpText>
        <label>EquipmentAddlDiscFlag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Go_To_Opportunity__c</fullName>
        <description>It Helps to redirect user from Quote line editor to opportunity</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;  SBQQ__Opportunity2__r.Id, &quot;Click Here&quot;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Redirects to the Opportunity page. Will NOT Save changes made in Edit Lines screen. Click &quot;Quick Save&quot; button first to save changes.</inlineHelpText>
        <label>Go To Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Recalled_Once__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recalled Once</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_ARR_USGH__c</fullName>
        <description>Annual recurring revenue</description>
        <formula>IF(NOT(ISBLANK(SBQQ__SubscriptionTerm__c)),IF(SBQQ__SubscriptionTerm__c &gt;= 12,(L2O_Reoccurring_NetTotal__c /SBQQ__SubscriptionTerm__c) * 12 ,L2O_Reoccurring_NetTotal__c), 0)</formula>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_ARR__c</fullName>
        <formula>IF(NOT(ISBLANK(SBQQ__SubscriptionTerm__c)),IF(SBQQ__SubscriptionTerm__c &gt;=12,(L2O_Subscription_total__c / SBQQ__SubscriptionTerm__c ) * 12,L2O_Subscription_total__c), 0)</formula>
        <label>ARR HHS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Agreement_Channel__c</fullName>
        <label>Agreement Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Agreement_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up to the Agreement record</description>
        <label>Agreement Id</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Quotes (Agreement Id)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Agreement_Number_Auto_INTERNAL__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Agreement Number_Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>L2O_Agreement_Number_Num_INTERNAL__c</fullName>
        <label>Agreement Number_Num (INTERNAL)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Approval_Required_On_QL__c</fullName>
        <description>This field will give the number of QLI which requires approval on a Quote</description>
        <label>Approval Required On QL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field gives the indication if Approval is required for the Quote.</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Auto_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for auto approving the auto renewal quote on 60 days prior to Contract end date</description>
        <label>Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_BD_Product_Count__c</fullName>
        <label>BD Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Ben_Broker_Involved__c</fullName>
        <formula>IF(OR(ISPICKVAL(SBQQ__Opportunity2__r.L2O_Benefit_Consultant_Involved_in_Deal__c , &quot;No Involvement&quot;), 
ISPICKVAL(SBQQ__Opportunity2__r.L2O_Benefit_Consultant_Involved_in_Deal__c , &quot;Consultant introduced us, but was not involved in selling&quot;), ISPICKVAL(SBQQ__Opportunity2__r.L2O_Benefit_Consultant_Involved_in_Deal__c , &quot;&quot;)), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <label>Benefit Consultant Involved in Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Bookings_Total_USGH__c</fullName>
        <formula>L2O_One_time_Total_Bookings_Total_USGH__c + L2O_Upfront_Fee_Total_BookingsTotal_USGH__c
        + IF(TEXT(SBQQ__Opportunity2__r.L2O_Business_Region__c) = &apos;USA&apos;,
        L2O_Net_ARR_With_PG_Bookings_Total_USGH__c, L2O_Net_ARR_Bookings_Total_USGH__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Bookings_Total__c</fullName>
        <description>Total bookings value</description>
        <formula>IF( SBQQ__SubscriptionTerm__c &lt;= 12,L2O_TCV_HHS__c,L2O_ARR__c + ( L2O_One_Time_Total_HHS__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Total HHS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Business_Region__c</fullName>
        <label>Business Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Bypass_CO_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to bypass change order Approval</description>
        <inlineHelpText>Please mark this flag if the CO only requires minute changes.</inlineHelpText>
        <label>Bypass CO Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Calculation_Method__c</fullName>
        <label>Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Carrier_ID__c</fullName>
        <formula>IF(ISBLANK(L2O_Carrier__c), &apos;NULL&apos; , L2O_Carrier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Carrier)</relationshipLabel>
        <relationshipName>CarrierQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Client_Line_of_Business__c</fullName>
        <formula>IF(ISBLANK(TEXT( SBQQ__Opportunity2__r.L2O_Client_Line_of_Business__c)),&apos;None&apos;,TEXT(SBQQ__Opportunity2__r.L2O_Client_Line_of_Business__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contract_Path_Sub_type__c</fullName>
        <formula>IF(ISBLANK(TEXT(SBQQ__Opportunity2__r.L2O_Contract_Path_Sub_type__c)), &apos;NULL&apos;,  IF(CONTAINS(TEXT(SBQQ__Opportunity2__r.L2O_Contract_Path_Sub_type__c), &apos; Intl Insurer&apos;),LEFT(TEXT(SBQQ__Opportunity2__r.L2O_Contract_Path_Sub_type__c),Find(&quot; Intl Insurer&quot;, TEXT(SBQQ__Opportunity2__r.L2O_Contract_Path_Sub_type__c)) - 1), TEXT(SBQQ__Opportunity2__r.L2O_Contract_Path_Sub_type__c)))</formula>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contract_Path__c</fullName>
        <description>Type of contracting the Contract</description>
        <formula>TEXT(SBQQ__Opportunity2__r.L2O_Contract_Path__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account_ID__c</fullName>
        <formula>L2O_Contracting_Account__r.L2O_GUID__c</formula>
        <label>Contracting Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracting Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Contracting Account)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Count_ADPP__c</fullName>
        <label>Count ADPP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_ADVWM__c</fullName>
        <label>L2O Count ADVWM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_CDPC__c</fullName>
        <description>Count for CDPC</description>
        <inlineHelpText>Count for CDPC</inlineHelpText>
        <label>L2O Count CDPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_COMWC__c</fullName>
        <label>L2O Count COMWC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_CV__c</fullName>
        <description>Helper field to count the number of Hypertension Care Line</description>
        <label>Count CV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_DIABCC__c</fullName>
        <label>Count DIABCC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_DM__c</fullName>
        <description>Helper field to count the number of Diabetes Management</description>
        <label>Count DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_DPCC__c</fullName>
        <label>Count DPCC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_DP__c</fullName>
        <description>Helper field to count the number of Pre-diabetes Management Line</description>
        <label>Count DP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Count_HYPTCC__c</fullName>
        <label>Count HYPTCC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Customer_Negotiation_Status__c</fullName>
        <description>This field is used for tracking the negotiation status with customer</description>
        <inlineHelpText>Please update status to &quot;re-negotiating&quot;, if you are planning to negotiate with customer and update status to &quot;re-negotiation refused&quot;. if customer disagrees with negotiation</inlineHelpText>
        <label>Customer Negotiation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Re-Negotiating</fullName>
                </value>
                <value>
                    <fullName>Re-Negotiation Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_DirectEmployerBusiness__c</fullName>
        <formula>Text(SBQQ__Opportunity2__r.L2O_DirectEmployerBusiness__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Employer Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_DirectTDHContract__c</fullName>
        <formula>Text(SBQQ__Opportunity2__r.L2O_DirectTDHContract__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct TDH Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Disable_Renewal_Co_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Renewal Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Equipment_Schedule_Number__c</fullName>
        <label>Equipment Schedule Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Executed_Date__c</fullName>
        <label>Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Expected_Visit_Revenue__c</fullName>
        <label>Expected Visit Revenue</label>
        <summarizedField>SBQQ__QuoteLine__c.L2O_Expected_Visit_Revenue__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>PMPM</fullName>
                </value>
                <value>
                    <fullName>PPPM</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Case Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Flat_Fee_Net_Total__c</fullName>
        <description>Roll-Up Summary from QuoteLine where Subscrirption Type = Renewable, Subscription Pricing = Fixed Pricing and Subscription Term = 12</description>
        <label>Flat Fee Net Total</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>equals</operation>
            <value>Fixed Price</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Renewable</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionTerm__c</field>
            <operation>equals</operation>
            <value>12</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Full_Value_of_Agreement__c</fullName>
        <formula>L2O_Bookings_Total_USGH__c  + L2O_Bookings_Total__c  +  L2O_Expected_Visit_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Value of Agreement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_GM_Product_Count__c</fullName>
        <label>GM Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_HY_Prod_Count__c</fullName>
        <label>HY Prod Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Hardware_Discount__c</fullName>
        <description>ROLL UP Summary to give MAX of Discount applied to a Product on Amendment for hardware and professional services</description>
        <label>Hardware Discount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__Discount__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.L2O_Pricing_Approval_Category__c</field>
            <operation>equals</operation>
            <value>Hardware, Professional Services</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.L2O_Contract_Action__c</field>
            <operation>equals</operation>
            <value>Quantity Increase, Upsell</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Inside_Sales__c</fullName>
        <formula>Owner:User.L2O_Inside_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inside Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Insurance_Policy__c</fullName>
        <label>Insurance Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical Care</fullName>
                </value>
                <value>
                    <fullName>Extended Health Coverage (EHC)</fullName>
                </value>
                <value>
                    <fullName>Mercer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Quote_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Line_Of_Business__c</fullName>
        <description>What kind of business is being conducted?</description>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS</fullName>
                </value>
                <value>
                    <fullName>USGH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Livongo_Product_Count__c</fullName>
        <description>Number of Products on the Quote related to Livongo</description>
        <label>Livongo Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_MLA_Number__c</fullName>
        <label>MLA Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Manager_Email__c</fullName>
        <description>Email for Account Manager</description>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>L2O_Monthly_Price_Total__c</fullName>
        <label>Monthly Price Total</label>
        <summarizedField>SBQQ__QuoteLine__c.L2O_Monthly_Price__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_Bookings_Total_USGH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net ARR Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_With_PG_Bookings_Total_USGH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net ARR With PG Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_With_PG__c</fullName>
        <description>RollupSummary from QuoteLine</description>
        <label>Net ARR With PG</label>
        <summarizedField>SBQQ__QuoteLine__c.L2O_Net_ARR_With_PG__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.L2O_USGH_and_International__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR__c</fullName>
        <label>Net ARR</label>
        <summarizedField>SBQQ__QuoteLine__c.L2O_Net_ARR__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.L2O_USGH_and_International__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Number_of_Lives__c</fullName>
        <description>Number of lives covered under the plan</description>
        <formula>SBQQ__Opportunity2__r.L2O_Initial_of_Lives__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_ORG_LINK__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_540, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_540)+4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2O_ORG_LINK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_One_Time_Total_HHS__c</fullName>
        <label>One Time Total HHS</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.L2O_Service_Platform__c</field>
            <operation>equals</operation>
            <value>HHS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.L2O_Business_Region_rev__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_One_Time_with_Upfront__c</fullName>
        <formula>L2O_One_time_Total_USGH__c +  L2O_Upfront_Fee_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time and Up Front Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_One_time_Total_Bookings_Total_USGH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One time Total Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_One_time_Total_USGH__c</fullName>
        <label>One Time Total</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.L2O_USGH_and_International__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity_Stage__c</fullName>
        <formula>TEXT(SBQQ__Opportunity2__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Owners_Manager__c</fullName>
        <description>Name of the Account Owners Manager</description>
        <formula>Owner:User.ManagerId</formula>
        <label>Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Owners_Managers_Manager__c</fullName>
        <description>Name of the Account owners Manager, Manager</description>
        <formula>Owner:User.Manager.ManagerId</formula>
        <label>Owner&apos;s Manager&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Agreement_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Agreement Link</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Percentage_of_lives__c</fullName>
        <description>% of lives for more than 1GM Product</description>
        <label>Percentage of lives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50/50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_PriceBook_Name__c</fullName>
        <formula>SBQQ__PriceBook__r.Name</formula>
        <label>PriceBook Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Pricing_Model__c</fullName>
        <formula>IF(ISBLANK(TEXT(SBQQ__Opportunity2__r.L2O_Pricing_Model__c)),&apos;None&apos;,TEXT(SBQQ__Opportunity2__r.L2O_Pricing_Model__c))</formula>
        <label>Pricing Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Purchase_Rental__c</fullName>
        <label>Purchase Or Rental?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Quote_Name__c</fullName>
        <description>What is the naming convention</description>
        <label>Quote Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Reason_for_Approval__c</fullName>
        <description>Why should the Quote be accepted and approved</description>
        <label>Reason for Approval</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Reoccurring_NetTotal__c</fullName>
        <description>Roll-up Summary of all Reoccurring Quote line Net Total</description>
        <label>Reoccurring NetTotal</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.L2O_USGH_and_International__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionPricing__c</field>
            <operation>equals</operation>
            <value>Fixed Price</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Replacement_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote that will take the place of original</description>
        <label>Replacement Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quotes (Replacement Quote)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Revenue_Effective_Date__c</fullName>
        <description>Date when contract begins</description>
        <label>Revenue Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Revenue_for_One_time__c</fullName>
        <label>One Time Revenue</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionType__c</field>
            <operation>notEqual</operation>
            <value>Renewable</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Type__c</fullName>
        <description>Type of transaction</description>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Shipment_Terms__c</fullName>
        <description>Do shipment terms apply?</description>
        <label>Shipment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>